--- a/source/css/style.css
+++ b/source/css/style.css
@@ -115,3 +115,44 @@
   width: 70%;
   margin: 60px auto 60px auto;
 }
+
+.reviews__wrapper {
+  margin: 0 auto;
+  max-width: 1100px;
+}
+
+.review {
+  display: grid;
+  grid-template-columns: 50px 1046px;
+  column-gap: 24px;
+  row-gap: 0;
+}
+
+.review__image {
+  display: block;
+  border-radius: 50%;
+  grid-column: 1 / 2;
+  grid-row: 1 / 3;
+  object-fit: cover;
+  background-color: #9f7303;
+}
+.review__name {
+  grid-column: 2 / 3;
+  display: block;
+  margin-top: auto;
+  margin-right: auto;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 21px;
+}
+
+.review__text {
+  display: block;
+  margin-top: auto;
+  margin-right: auto;
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 27px;
+}
