--- a/source/css/style.css
+++ b/source/css/style.css
@@ -116,40 +116,45 @@
   margin: 60px auto 60px auto;
 }
 
-.reviews__wrapper {
+.reviews-wrapper {
   margin: 0 auto;
   max-width: 1100px;
 }
 
 .review {
   display: grid;
-  grid-template-columns: 50px 1046px;
-  column-gap: 24px;
-  row-gap: 0;
+  grid-template-columns: 50px 1fr;
+  grid-template-rows: 27px 1fr;
+  column-gap: 22px;
+  margin-bottom: 30px;
 }
 
-.review__image {
-  display: block;
-  border-radius: 50%;
+.review-image-wrapper {
+  width: 50px;
+  height: 50px;
   grid-column: 1 / 2;
   grid-row: 1 / 3;
-  object-fit: cover;
   background-color: #9f7303;
+  border-radius: 50%;
 }
-.review__name {
-  grid-column: 2 / 3;
+
+.review__image img{
+  border-radius: 50%;
+  object-fit: cover;
+  text-indent: -100vw
+  
+}
+.review-name {
   display: block;
   margin-top: auto;
-  margin-right: auto;
   font-weight: 500;
   font-size: 14px;
   line-height: 21px;
 }
 
-.review__text {
+.review-text {
   display: block;
-  margin-top: auto;
-  margin-right: auto;
+  margin: 0;
   grid-column: 2 / 3;
   grid-row: 2 / 3;
   font-weight: 400;
